--- a/contact.html
+++ b/contact.html
@@ -127,7 +127,7 @@
                   p-id="14862"></path>
               </svg>
             </a>
-            <a title="github:wttAndroid" href="https://gitee.com/wttAndroid">
+            <a title="github:kobaiw" href="https://gitee.com/kobaiw">
               <svg t="1649145950732" class="icon" viewBox="0 0 1024 1024" version="1.1"
                 xmlns="http://www.w3.org/2000/svg" p-id="16367" width="15" height="15">
                 <path
@@ -189,9 +189,9 @@
                   p-id="2176"></path>
               </svg>
               <h6>gitee</h6>
-              <p>gitee: <i>kobai1</i>
+              <p>gitee: <i>kobaiw</i>
               </p>
-              <p>gitee: <i>kobai1</i></p>
+              <p>gitee: <i>kobaiw</i></p>
             </div>
             <div class="li1-box-item carbox borderbefore">
               <svg t="1649226472349" class="icon" viewBox="0 0 1024 1024" version="1.1"
